--- a/2.5.1 Covid-19.html
+++ b/2.5.1 Covid-19.html
@@ -46,11 +46,13 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
+						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
 						<li><strong>- Covid-19 (Python prosjekt)</strong></a></li>
 						<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI prosjekt)</a></li>
-						<li><a href="2.3.1 Iskald.html">- Iskald (Qlik dashboard)</a></li>
+						<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
 						<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
 						<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
 					</ul>
@@ -59,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Covid-19</h1>
+						<h1>Covid-19</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>Som et avsluttende prosjekt på to Python-kurs jeg tok i 2022, analyserte jeg data av registrerte tilfeller og 
 							dødsfall av Covid-19 i land verden rundt. Disse Python-kursene, "Data Analysis with Python" og "Data Visualization with 
