--- a/2.5.2 Covid-19.html
+++ b/2.5.2 Covid-19.html
@@ -46,11 +46,13 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
+						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
 						<li><strong>- Covid-19 (Python project)</strong></a></li>
 						<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik dashboard)</a></li>
+						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
 						<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel project)</a></li>
 						<li><a href="2.1.2 Seafood.html">- Seafood (report overview)</a></li>
 					</ul>
@@ -59,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Covid-19</h1>
+						<h1>Covid-19</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>As a final project concluding two Python courses I took in 2022, I analyzed data about registered cases and deaths of Covid-19 in countries around the world. 
 							These Python courses, "Data Analysis with Python" and "Data Visualization with Python", are created by IBM and hosted by Coursera. 
